template injection now works as intended. tools/ folder, each module containing tools for an agent

--- a/tests/graph.ipynb
+++ b/tests/graph.ipynb
@@ -58,7 +58,7 @@
     "from twilio.rest import Client as TwilioClient\n",
     "from typing import TypedDict\n",
     "import os\n",
-    "from agents.notion_fetch_agent import fetch_latest_notion_journaling_entry\n",
+    "from tools.notion_fetch_agent_tools import fetch_latest_notion_journaling_entry\n",
     "from typing import TypedDict\n",
     "from langgraph.graph import END, StateGraph"
    ]
