cronjob now works for this langgraph script!

--- a/tests/graph.ipynb
+++ b/tests/graph.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
        "True"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,9 +137,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/1p/k8wcs51j0bndgtngv7p3gbsr0000gn/T/ipykernel_79557/1288154412.py:1: LangChainDeprecationWarning: LangChain agents will continue to be supported, but it is recommended for new use cases to be built with LangGraph. LangGraph offers a more flexible and full-featured framework for building agents, including support for tool-calling, persistence of state, and human-in-the-loop workflows. For details, refer to the `LangGraph documentation <https://langchain-ai.github.io/langgraph/>`_ as well as guides for `Migrating from AgentExecutor <https://python.langchain.com/docs/how_to/migrate_agent/>`_ and LangGraph's `Pre-built ReAct agent <https://langchain-ai.github.io/langgraph/how-tos/create-react-agent/>`_.\n",
+      "  notion_agent = initialize_agent(\n"
+     ]
+    }
+   ],
    "source": [
     "notion_agent = initialize_agent(\n",
     "    tools=tools,\n",
@@ -150,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,17 +168,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'input': '\\n    You are an assistant responsible for simply making a call to the notion client API,\\n    and then doing the following instructions on the returned data:\\n    From this journaling, extract out the ways the user desires to grow.\\n    ',\n",
-       " 'output': 'The user desires to grow spiritually, as a leader, by embracing intrinsic motivation, strengthening relationships, maintaining joy and gratitude, and through personal accountability and a growth mindset.'}"
+       "{'input': 'You are an assistant responsible for simply making a call to the notion client API, and then doing the following instructions on the returned data: From this journaling, extract out the ways the user desires to grow.',\n",
+       " 'output': \"The user's desires to grow include: \\n\\n1. Spiritual Growth and Community Building: The user wants to develop their spiritual life and be used by God, seeking community among mature, godly individuals, and considering leading a group outside of a traditional church setting.\\n\\n2. Leadership and Influence: The user aims to harness their leadership abilities to inspire and support others, starting small and potentially expanding into a large, influential community.\\n\\n3. Personal Development: They wish to understand their unique purpose, rooted in intrinsic motivation, while fostering a vision and passion for serving others.\\n\\n4. Perseverance and Resilience: The user acknowledges growth requires enduring challenges and developing character.\\n\\n5. Love and Relationships: They emphasize the importance of loving, supportive friendships and desire deeper bonds through understanding and patience.\\n\\n6. Joy and Gratitude: Engaging in joyful activities, such as worship, is crucial to the user's growth journey.\"}"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,25 +238,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/1p/k8wcs51j0bndgtngv7p3gbsr0000gn/T/ipykernel_79557/2322471595.py:1: LangChainDeprecationWarning: The class `LLMChain` was deprecated in LangChain 0.1.17 and will be removed in 1.0. Use :meth:`~RunnableSequence, e.g., `prompt | llm`` instead.\n",
+      "  generation_agent_llm_chain = LLMChain(llm=llm, prompt=generation_agent_prompt_template)\n"
+     ]
+    }
+   ],
    "source": [
     "generation_agent_llm_chain = LLMChain(llm=llm, prompt=generation_agent_prompt_template)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/1p/k8wcs51j0bndgtngv7p3gbsr0000gn/T/ipykernel_79557/3269216885.py:4: LangChainDeprecationWarning: The method `Chain.run` was deprecated in langchain 0.1.0 and will be removed in 1.0. Use :meth:`~invoke` instead.\n",
+      "  generation_agent_llm_chain.run(x)\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "'Philippians 4:13 (NIV): \"I can do all this through him who gives me strength.\" \\n\\nThis verse emphasizes intrinsic motivation, spiritual strength, and the empowerment needed for growth in various personal areas, including leadership and relationships.'"
+       "'A scripture that encompasses themes of spiritual growth, leadership, intrinsic motivation, strong relationships, joy, gratitude, personal accountability, and a growth mindset is Philippians 4:13: \\n\\n\"I can do all things through Christ who strengthens me.\" \\n\\nThis verse encourages reliance on spiritual strength, fostering leadership and motivation, and supports perseverance and personal growth.'"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,22 +416,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sent A fitting Bible verse that aligns with the user's desire for personal growth through intrinsic motivation, servant leadership, purposeful use of gifts, and fostering community driven by faith and vision is: 1 Peter 4:10 (NIV): 'Each of you should use whatever gift you have received to serve others, as faithful stewards of God's grace in its various forms.'\n",
-      "Final state: {'query': 'Send me bible scripture that will help me with how i want to grow from my latest journaling in Notion.', 'notion_data_action': 'From this journaling, extract out the primary way the user desires to grow in his/her life.', 'notion_next_node_instructions': \"Based on this growth summary of a user's journal page, provide a single Bible scripture/verse that will help them with personal growth: \", 'notion_journal_growth_summary': 'The user desires to grow through intrinsic motivation, embracing servant leadership, using their gifts purposefully, and fostering community, driven by their faith and vision.', 'message': 'A fitting Bible verse that aligns with the user\\'s desire for personal growth through intrinsic motivation, servant leadership, purposeful use of gifts, and fostering community driven by faith and vision is:\\n\\n1 Peter 4:10 (NIV): \"Each of you should use whatever gift you have received to serve others, as faithful stewards of God\\'s grace in its various forms.\"'}\n"
+      "Sent A Bible verse that aligns with the user's desire for personal growth in understanding their purpose, enhancing their faith, and exercising servant leadership is: Philippians 2:3-4 (NIV): 'Do nothing out of selfish ambition or vain conceit. Rather, in humility value others above yourselves, not looking to your own interests but each of you to the interests of the others.' This verse encourages humility, selflessness, and a focus on serving others, which aligns well with the goals of spiritual grounding and servant leadership.\n",
+      "Final state: {'query': 'asdas', 'notion_data_action': 'From this journaling, extract out the primary way the user desires to grow in his/her life.', 'notion_next_node_instructions': \"Based on this growth summary of a user's journal page, provide a single Bible scripture/verse that will help them with personal growth: \", 'notion_journal_growth_summary': 'The user desires to grow by understanding his purpose, enhancing his faith, and exercising servant leadership to positively impact others, driven by intrinsic motivation and spiritual grounding.', 'message': 'A Bible verse that aligns with the user\\'s desire for personal growth in understanding their purpose, enhancing their faith, and exercising servant leadership is:\\n\\nPhilippians 2:3-4 (NIV): \"Do nothing out of selfish ambition or vain conceit. Rather, in humility value others above yourselves, not looking to your own interests but each of you to the interests of the others.\" \\n\\nThis verse encourages humility, selflessness, and a focus on serving others, which aligns well with the goals of spiritual grounding and servant leadership.'}\n"
      ]
     }
    ],
    "source": [
     "# This initial state is going to contain the injected variables from the orchestrator\n",
     "initial_state = {\n",
-    "    \"query\": GRAPH_ENTRY_QUERY,\n",
+    "    \"query\": \"asdas\",\n",
     "    \"notion_data_action\": \"From this journaling, extract out the primary way the user desires to grow in his/her life.\",\n",
     "    \"notion_next_node_instructions\": \"Based on this growth summary of a user's journal page, provide a single Bible scripture/verse that will help them with personal growth: \"\n",
     "}\n",
