Reasoning agent using DeepSeek R1. Change scripture generation to basic generation

--- a/tests/graph.ipynb
+++ b/tests/graph.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
        "True"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,14 +137,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/1p/k8wcs51j0bndgtngv7p3gbsr0000gn/T/ipykernel_79557/1288154412.py:1: LangChainDeprecationWarning: LangChain agents will continue to be supported, but it is recommended for new use cases to be built with LangGraph. LangGraph offers a more flexible and full-featured framework for building agents, including support for tool-calling, persistence of state, and human-in-the-loop workflows. For details, refer to the `LangGraph documentation <https://langchain-ai.github.io/langgraph/>`_ as well as guides for `Migrating from AgentExecutor <https://python.langchain.com/docs/how_to/migrate_agent/>`_ and LangGraph's `Pre-built ReAct agent <https://langchain-ai.github.io/langgraph/how-tos/create-react-agent/>`_.\n",
+      "/var/folders/1p/k8wcs51j0bndgtngv7p3gbsr0000gn/T/ipykernel_92160/1288154412.py:1: LangChainDeprecationWarning: LangChain agents will continue to be supported, but it is recommended for new use cases to be built with LangGraph. LangGraph offers a more flexible and full-featured framework for building agents, including support for tool-calling, persistence of state, and human-in-the-loop workflows. For details, refer to the `LangGraph documentation <https://langchain-ai.github.io/langgraph/>`_ as well as guides for `Migrating from AgentExecutor <https://python.langchain.com/docs/how_to/migrate_agent/>`_ and LangGraph's `Pre-built ReAct agent <https://langchain-ai.github.io/langgraph/how-tos/create-react-agent/>`_.\n",
       "  notion_agent = initialize_agent(\n"
      ]
     }
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,17 +168,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "{'input': 'You are an assistant responsible for simply making a call to the notion client API, and then doing the following instructions on the returned data: From this journaling, extract out the ways the user desires to grow.',\n",
-       " 'output': \"The user's desires to grow include: \\n\\n1. Spiritual Growth and Community Building: The user wants to develop their spiritual life and be used by God, seeking community among mature, godly individuals, and considering leading a group outside of a traditional church setting.\\n\\n2. Leadership and Influence: The user aims to harness their leadership abilities to inspire and support others, starting small and potentially expanding into a large, influential community.\\n\\n3. Personal Development: They wish to understand their unique purpose, rooted in intrinsic motivation, while fostering a vision and passion for serving others.\\n\\n4. Perseverance and Resilience: The user acknowledges growth requires enduring challenges and developing character.\\n\\n5. Love and Relationships: They emphasize the importance of loving, supportive friendships and desire deeper bonds through understanding and patience.\\n\\n6. Joy and Gratitude: Engaging in joyful activities, such as worship, is crucial to the user's growth journey.\"}"
+       " 'output': 'The user desires to grow in spiritual and personal development, leadership, intrinsic motivation, perseverance, meaningful relationships, and through gratitude and reflective practices.'}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,14 +238,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/1p/k8wcs51j0bndgtngv7p3gbsr0000gn/T/ipykernel_79557/2322471595.py:1: LangChainDeprecationWarning: The class `LLMChain` was deprecated in LangChain 0.1.17 and will be removed in 1.0. Use :meth:`~RunnableSequence, e.g., `prompt | llm`` instead.\n",
+      "/var/folders/1p/k8wcs51j0bndgtngv7p3gbsr0000gn/T/ipykernel_92160/2322471595.py:1: LangChainDeprecationWarning: The class `LLMChain` was deprecated in LangChain 0.1.17 and will be removed in 1.0. Use :meth:`~RunnableSequence, e.g., `prompt | llm`` instead.\n",
       "  generation_agent_llm_chain = LLMChain(llm=llm, prompt=generation_agent_prompt_template)\n"
      ]
     }
@@ -256,24 +256,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/1p/k8wcs51j0bndgtngv7p3gbsr0000gn/T/ipykernel_79557/3269216885.py:4: LangChainDeprecationWarning: The method `Chain.run` was deprecated in langchain 0.1.0 and will be removed in 1.0. Use :meth:`~invoke` instead.\n",
+      "/var/folders/1p/k8wcs51j0bndgtngv7p3gbsr0000gn/T/ipykernel_92160/3269216885.py:4: LangChainDeprecationWarning: The method `Chain.run` was deprecated in langchain 0.1.0 and will be removed in 1.0. Use :meth:`~invoke` instead.\n",
       "  generation_agent_llm_chain.run(x)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "'A scripture that encompasses themes of spiritual growth, leadership, intrinsic motivation, strong relationships, joy, gratitude, personal accountability, and a growth mindset is Philippians 4:13: \\n\\n\"I can do all things through Christ who strengthens me.\" \\n\\nThis verse encourages reliance on spiritual strength, fostering leadership and motivation, and supports perseverance and personal growth.'"
+       "'A scripture that aligns well with your goals for personal growth is Philippians 4:13: \"I can do all things through Christ who strengthens me.\" This verse encourages intrinsic motivation and reliance on spiritual strength, which can bolster your leadership skills, reinforce your relationships, and support your pursuit of joy, gratitude, personal accountability, and a growth mindset.'"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,12 +381,91 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Agent 4 - Reasoning (with R1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_deepseek import ChatDeepSeek\n",
+    "from langchain_core.prompts import PromptTemplate\n",
+    "from langchain_core.output_parsers import StrOutputParser\n",
+    "import os\n",
+    "deepseek_api_key = os.getenv(\"DEEPSEEK_API_KEY\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The capital of France is **Paris**. This city is renowned for its cultural landmarks, including the Eiffel Tower, the Louvre Museum, and Notre-Dame Cathedral. Paris has been the political and administrative center of France for centuries, housing key institutions like the French government, the President's residence (Élysée Palace), and the National Assembly.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Initialize the ChatDeepSeek model\n",
+    "llm = ChatDeepSeek(\n",
+    "    model=\"deepseek-reasoner\",\n",
+    "    temperature=0.7,\n",
+    "    max_tokens=None,\n",
+    "    timeout=None,\n",
+    "    max_retries=2,\n",
+    ")\n",
+    "\n",
+    "# Create a prompt template\n",
+    "prompt = PromptTemplate(\n",
+    "    input_variables=[\"instructions\"],\n",
+    "    template=\"\"\"\n",
+    "You are an agent with reasoning capabilities, reponsible for the following:\n",
+    "\n",
+    "{instructions}\n",
+    "\"\"\"\n",
+    ")\n",
+    "\n",
+    "# Create the chain using the runnables API (prompt | llm | parser)\n",
+    "chain = prompt | llm | StrOutputParser()\n",
+    "\n",
+    "# Run the chain\n",
+    "response = chain.invoke({\"instructions\": \"What is the capital of France?\"})\n",
+    "print(response)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def reasoning_node(state: State) -> State:\n",
+    "    # Output from previous node\n",
+    "    # TEMPLATE VAR\n",
+    "    notion_journal_growth_summary = state.get(\"notion_journal_growth_summary\")\n",
+    "    # TEMPLATE VAR\n",
+    "    notion_next_node_instructions = state.get(\"notion_next_node_instructions\") + notion_journal_growth_summary\n",
+    "\n",
+    "    print(\"Reasoning...\")\n",
+    "    response = chain.invoke({\"instructions\": notion_next_node_instructions})\n",
+    "    return {\"message\": response}\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Graph"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,7 +475,8 @@
     "# Add nodes\n",
     "# TEMPLATE VAR - We can loop through the nodes in the actual app\n",
     "graph.add_node(\"notion_node\", notion_node)\n",
-    "graph.add_node(\"generation_node\", generation_node)\n",
+    "#graph.add_node(\"generation_node\", generation_node)\n",
+    "graph.add_node(\"reasoning_node\", reasoning_node) # For simplicity, lets have a given AI job use either generation or reasoning, not both (hence, both set \"message\" attribute)\n",
     "graph.add_node(\"twilio_node\", twilio_node)\n",
     "\n",
     "# Set the entry point\n",
@@ -405,10 +485,8 @@
     "\n",
     "# Define sequential edges\n",
     "# TEMPLATE VAR -Also loop through this\n",
-    "graph.add_edge(\"notion_node\", \"generation_node\")\n",
-    "\n",
-    "graph.add_edge(\"generation_node\", END)\n",
-    "graph.add_edge(\"generation_node\", \"twilio_node\")\n",
+    "graph.add_edge(\"notion_node\", \"reasoning_node\")\n",
+    "graph.add_edge(\"reasoning_node\", \"twilio_node\")\n",
     "graph.add_edge(\"twilio_node\", END)\n",
     "\n",
     "compiled_graph = graph.compile()"
@@ -416,15 +494,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sent A Bible verse that aligns with the user's desire for personal growth in understanding their purpose, enhancing their faith, and exercising servant leadership is: Philippians 2:3-4 (NIV): 'Do nothing out of selfish ambition or vain conceit. Rather, in humility value others above yourselves, not looking to your own interests but each of you to the interests of the others.' This verse encourages humility, selflessness, and a focus on serving others, which aligns well with the goals of spiritual grounding and servant leadership.\n",
-      "Final state: {'query': 'asdas', 'notion_data_action': 'From this journaling, extract out the primary way the user desires to grow in his/her life.', 'notion_next_node_instructions': \"Based on this growth summary of a user's journal page, provide a single Bible scripture/verse that will help them with personal growth: \", 'notion_journal_growth_summary': 'The user desires to grow by understanding his purpose, enhancing his faith, and exercising servant leadership to positively impact others, driven by intrinsic motivation and spiritual grounding.', 'message': 'A Bible verse that aligns with the user\\'s desire for personal growth in understanding their purpose, enhancing their faith, and exercising servant leadership is:\\n\\nPhilippians 2:3-4 (NIV): \"Do nothing out of selfish ambition or vain conceit. Rather, in humility value others above yourselves, not looking to your own interests but each of you to the interests of the others.\" \\n\\nThis verse encourages humility, selflessness, and a focus on serving others, which aligns well with the goals of spiritual grounding and servant leadership.'}\n"
+      "Reasoning...\n",
+      "Sent **Bible Verse:**  \\n*\\\"Each of you should use whatever gift you have received to serve others, as faithful stewards of God’s grace in its various forms.\\\"*  \\n**—1 Peter 4:10 (NIV)**  \\n\\n**Reasoning:**  \\n- **Servant Leadership & Using Gifts:** Directly emphasizes stewarding God-given gifts to serve others, aligning with servant leadership.  \\n- **Supportive Community:** Serving others fosters connection and communal support.  \\n- **Deepening Faith:** Calls believers to act as \\\"faithful stewards,\\\" anchoring service in trust and gratitude for God’s grace.  \\n- **Intrinsic Motivation & Perseverance:** Serving as a response to divine grace cultivates purpose-driven endurance, reinforcing perseverance rooted in faith rather than external rewards.  \\n\\nThis verse holistically addresses the user’s growth goals while grounding their journey in biblical stewardship and love.\n",
+      "Final state: {'query': 'asdas', 'notion_data_action': 'From this journaling, extract out the primary way the user desires to grow in his/her life.', 'notion_next_node_instructions': \"Based on this growth summary of a user's journal page, provide a single Bible scripture/verse that will help them with personal growth: \", 'notion_journal_growth_summary': 'The user desires to grow by becoming a servant leader, utilizing their gifts to serve others, develop a supportive community, deepen their faith, and maintain intrinsic motivation and perseverance in their journey.', 'message': '**Bible Verse:**  \\n*\"Each of you should use whatever gift you have received to serve others, as faithful stewards of God’s grace in its various forms.\"*  \\n**—1 Peter 4:10 (NIV)**  \\n\\n**Reasoning:**  \\n- **Servant Leadership & Using Gifts:** Directly emphasizes stewarding God-given gifts to serve others, aligning with servant leadership.  \\n- **Supportive Community:** Serving others fosters connection and communal support.  \\n- **Deepening Faith:** Calls believers to act as \"faithful stewards,\" anchoring service in trust and gratitude for God’s grace.  \\n- **Intrinsic Motivation & Perseverance:** Serving as a response to divine grace cultivates purpose-driven endurance, reinforcing perseverance rooted in faith rather than external rewards.  \\n\\nThis verse holistically addresses the user’s growth goals while grounding their journey in biblical stewardship and love.'}\n"
      ]
     }
    ],
