--- a/tests/call_agent.ipynb
+++ b/tests/call_agent.ipynb
@@ -91,7 +91,7 @@
     "    agent = Agent(\n",
     "        name=\"jessica\",\n",
     "        prompt=\"you are a young woman named jessica who says 'like' a lot\",\n",
-    "        voice_id=\"b7d50908-b17c-442d-ad8d-810c63997ed9\"\n",
+    "        voice_id=\"...\"\n",
     "    )\n",
     "\n",
     "    # define a scenario to test\n",
